--- a/OpticalValleyUnite/Classes/UI/ReportForm/ViewController/YQReportFormFirstVC.xib
+++ b/OpticalValleyUnite/Classes/UI/ReportForm/ViewController/YQReportFormFirstVC.xib
@@ -19,7 +19,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g2Y-Co-A2N">
+                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g2Y-Co-A2N">
                     <rect key="frame" x="15" y="120" width="105" height="100"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="l0W-fl-Cqn"/>
@@ -36,7 +36,7 @@
                         <action selector="reportFormSelectClick:" destination="-1" eventType="touchUpInside" id="SJs-RW-APp"/>
                     </connections>
                 </button>
-                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ij8-Ur-dic">
+                <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ij8-Ur-dic">
                     <rect key="frame" x="135" y="120" width="105" height="100"/>
                     <state key="normal" title="周报">
                         <color key="titleColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
@@ -50,7 +50,7 @@
                         <action selector="reportFormSelectClick:" destination="-1" eventType="touchUpInside" id="ox6-pn-tJm"/>
                     </connections>
                 </button>
-                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Umw-X8-xpe">
+                <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Umw-X8-xpe">
                     <rect key="frame" x="255" y="120" width="105" height="100"/>
                     <state key="normal" title="月报">
                         <color key="titleColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
