--- a/OpticalValleyUnite/Classes/UI/ReportForm/ViewController/YQReportForm.storyboard
+++ b/OpticalValleyUnite/Classes/UI/ReportForm/ViewController/YQReportForm.storyboard
@@ -24,8 +24,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QU1-cl-baG">
                                 <rect key="frame" x="0.0" y="20" width="375" height="60"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="时间至" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="80G-o6-Ets">
-                                        <rect key="frame" x="5" y="20" width="320" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="至" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="80G-o6-Ets">
+                                        <rect key="frame" x="158.5" y="20" width="18" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -38,31 +38,56 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tz6-bM-Kba">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                        <rect key="frame" x="330" y="0.0" width="45" height="60"/>
                                         <connections>
                                             <action selector="timeLabelClick:" destination="PIx-t8-10M" eventType="touchUpInside" id="KBy-j7-Nc2"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5J4-pj-26h">
+                                        <rect key="frame" x="0.0" y="15.5" width="155.5" height="29"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <state key="normal">
+                                            <color key="titleColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="startTimeClick:" destination="PIx-t8-10M" eventType="touchUpInside" id="WPW-rJ-RNV"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jbC-pZ-rNr">
+                                        <rect key="frame" x="181.5" y="15.5" width="148.5" height="29"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <state key="normal">
+                                            <color key="titleColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="endTimeClick:" destination="PIx-t8-10M" eventType="touchUpInside" id="azx-zN-eRx"/>
                                         </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="vh4-k2-25v" firstAttribute="leading" secondItem="80G-o6-Ets" secondAttribute="trailing" constant="5" id="0j8-Xo-aYr"/>
                                     <constraint firstItem="80G-o6-Ets" firstAttribute="centerY" secondItem="QU1-cl-baG" secondAttribute="centerY" id="0z0-uR-H7N"/>
                                     <constraint firstItem="Tz6-bM-Kba" firstAttribute="top" secondItem="QU1-cl-baG" secondAttribute="top" id="7vd-CU-3o9"/>
+                                    <constraint firstItem="80G-o6-Ets" firstAttribute="leading" secondItem="5J4-pj-26h" secondAttribute="trailing" constant="3" id="Azh-zx-khk"/>
+                                    <constraint firstItem="Tz6-bM-Kba" firstAttribute="leading" secondItem="vh4-k2-25v" secondAttribute="leading" id="G5X-6h-JdQ"/>
+                                    <constraint firstItem="5J4-pj-26h" firstAttribute="leading" secondItem="QU1-cl-baG" secondAttribute="leading" id="H49-o3-N4x"/>
                                     <constraint firstAttribute="height" constant="60" id="LCc-aW-Fv5"/>
+                                    <constraint firstItem="jbC-pZ-rNr" firstAttribute="centerY" secondItem="QU1-cl-baG" secondAttribute="centerY" id="LzG-b2-NwE"/>
+                                    <constraint firstItem="80G-o6-Ets" firstAttribute="centerX" secondItem="QU1-cl-baG" secondAttribute="centerX" constant="-20" id="MsM-1O-eNx"/>
+                                    <constraint firstItem="Tz6-bM-Kba" firstAttribute="leading" secondItem="jbC-pZ-rNr" secondAttribute="trailing" id="UxL-c5-zhZ"/>
                                     <constraint firstItem="vh4-k2-25v" firstAttribute="centerY" secondItem="QU1-cl-baG" secondAttribute="centerY" id="Yle-vJ-aPi"/>
                                     <constraint firstAttribute="bottom" secondItem="Tz6-bM-Kba" secondAttribute="bottom" id="hdI-rM-oDr"/>
                                     <constraint firstAttribute="trailing" secondItem="Tz6-bM-Kba" secondAttribute="trailing" id="mOf-cK-ldm"/>
-                                    <constraint firstItem="80G-o6-Ets" firstAttribute="leading" secondItem="QU1-cl-baG" secondAttribute="leading" constant="5" id="qM3-kZ-YCF"/>
+                                    <constraint firstItem="5J4-pj-26h" firstAttribute="centerY" secondItem="QU1-cl-baG" secondAttribute="centerY" id="mq2-wr-jFD"/>
+                                    <constraint firstItem="jbC-pZ-rNr" firstAttribute="leading" secondItem="80G-o6-Ets" secondAttribute="trailing" constant="5" id="urs-Im-zue"/>
                                     <constraint firstAttribute="trailing" secondItem="vh4-k2-25v" secondAttribute="trailing" constant="5" id="vrj-ua-nfQ"/>
-                                    <constraint firstItem="Tz6-bM-Kba" firstAttribute="leading" secondItem="QU1-cl-baG" secondAttribute="leading" id="wnL-mj-r4j"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="81" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="H7U-Nm-joF">
                                 <rect key="frame" x="0.0" y="90" width="375" height="577"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="reportFormCell" rowHeight="81" id="wZQ-tA-72V">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="reportFormCell" rowHeight="81" id="wZQ-tA-72V" customClass="YQReportFromDetailCell" customModule="OpticalValleyUnite" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="81"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wZQ-tA-72V" id="xDJ-Zb-fSL">
@@ -98,6 +123,11 @@
                                                 <constraint firstItem="6cl-28-Wny" firstAttribute="leading" secondItem="xDJ-Zb-fSL" secondAttribute="leading" constant="5" id="zed-nP-dPq"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="nameLabel" destination="Jty-9Y-j3Z" id="dW2-VH-21W"/>
+                                            <outlet property="reportFormTitleLabel" destination="6cl-28-Wny" id="heZ-by-Iig"/>
+                                            <outlet property="timeLabel" destination="c9f-hJ-M8g" id="Acv-E7-vjU"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -118,6 +148,8 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="endTimeButtonClick" destination="jbC-pZ-rNr" id="6Wz-VM-LSb"/>
+                        <outlet property="startTimeButtonClick" destination="5J4-pj-26h" id="yIQ-YC-NJW"/>
                         <outlet property="tabelView" destination="H7U-Nm-joF" id="ZFv-In-NLj"/>
                         <outlet property="timeLabel" destination="80G-o6-Ets" id="Mg0-pY-Hx5"/>
                     </connections>
