--- a/OpticalValleyUnite/Classes/UI/ReportForm/View/YQAddHighlights.xib
+++ b/OpticalValleyUnite/Classes/UI/ReportForm/View/YQAddHighlights.xib
@@ -49,7 +49,7 @@
                                 </constraints>
                             </view>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="亮点标题" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jjU-WP-HRP">
-                                <rect key="frame" x="15" y="40" width="459" height="40"/>
+                                <rect key="frame" x="15" y="45" width="459" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="yf8-aK-xqo"/>
                                 </constraints>
@@ -63,22 +63,33 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TI0-ml-jdN">
-                                <rect key="frame" x="10" y="80" width="464" height="1"/>
+                                <rect key="frame" x="10" y="85" width="464" height="1"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="29G-Zb-bgd"/>
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TkA-ym-OlF" customClass="SJTextView">
-                                <rect key="frame" x="15" y="81" width="459" height="100"/>
+                                <rect key="frame" x="15" y="86" width="459" height="100"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="CIJ-dM-t86"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jip-eE-bJ3" customClass="SJAddView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="181" width="474" height="124.5"/>
+                                <rect key="frame" x="0.0" y="186" width="474" height="119.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
@@ -86,7 +97,7 @@
                         <constraints>
                             <constraint firstItem="TkA-ym-OlF" firstAttribute="top" secondItem="TI0-ml-jdN" secondAttribute="bottom" id="0iY-YZ-5Lp"/>
                             <constraint firstItem="Jip-eE-bJ3" firstAttribute="leading" secondItem="7bp-VA-cL9" secondAttribute="leading" id="0lW-j5-QES"/>
-                            <constraint firstItem="jjU-WP-HRP" firstAttribute="top" secondItem="iRa-cU-0CW" secondAttribute="bottom" id="9qB-q1-nyK"/>
+                            <constraint firstItem="jjU-WP-HRP" firstAttribute="top" secondItem="iRa-cU-0CW" secondAttribute="bottom" constant="5" id="9qB-q1-nyK"/>
                             <constraint firstItem="TI0-ml-jdN" firstAttribute="top" secondItem="jjU-WP-HRP" secondAttribute="bottom" id="Ird-MT-uTZ"/>
                             <constraint firstItem="iRa-cU-0CW" firstAttribute="top" secondItem="7bp-VA-cL9" secondAttribute="top" id="KVS-Et-y7w"/>
                             <constraint firstItem="Jip-eE-bJ3" firstAttribute="top" secondItem="TkA-ym-OlF" secondAttribute="bottom" id="L2Q-hU-bfT"/>
