--- a/OpticalValleyUnite/Classes/UI/ReportForm/ViewController/YQWorkHighlightsVC.xib
+++ b/OpticalValleyUnite/Classes/UI/ReportForm/ViewController/YQWorkHighlightsVC.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YQWorkHighlightsVC" customModule="OpticalValleyUnite" customModuleProvider="target">
             <connections>
-                <outlet property="tableView" destination="Acl-R1-Hbi" id="RyT-8y-uFP"/>
+                <outlet property="scrollView" destination="0l5-gi-EwB" id="GiN-YN-s7M"/>
                 <outlet property="view" destination="7Oy-2H-VFO" id="4XW-x2-k2P"/>
             </connections>
         </placeholder>
@@ -64,25 +64,45 @@
                         <constraint firstAttribute="trailing" secondItem="Zeb-Q0-ewo" secondAttribute="trailing" id="xTm-mM-Tsn"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Acl-R1-Hbi">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="622"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="PUZ-n8-Izm"/>
-                        <outlet property="delegate" destination="-1" id="dFI-i7-a2D"/>
-                    </connections>
-                </tableView>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0l5-gi-EwB">
+                    <rect key="frame" x="0.0" y="64" width="375" height="513"/>
+                </scrollView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eu2-To-yrC">
+                    <rect key="frame" x="0.0" y="577" width="375" height="45"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e1E-Pa-DqA">
+                            <rect key="frame" x="325" y="0.0" width="50" height="45"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="50" id="Xsz-cD-ugb"/>
+                            </constraints>
+                            <state key="normal" title="添加"/>
+                            <connections>
+                                <action selector="addButtonClick:" destination="-1" eventType="touchUpInside" id="H7d-ie-NUD"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="e1E-Pa-DqA" secondAttribute="trailing" id="0a9-bJ-vMk"/>
+                        <constraint firstAttribute="bottom" secondItem="e1E-Pa-DqA" secondAttribute="bottom" id="GST-2l-kD9"/>
+                        <constraint firstAttribute="height" constant="45" id="jvf-fy-1tZ"/>
+                        <constraint firstItem="e1E-Pa-DqA" firstAttribute="top" secondItem="eu2-To-yrC" secondAttribute="top" id="s9M-Xs-7H7"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="zAq-Kz-Q3J" secondAttribute="bottom" id="1eG-re-RVZ"/>
-                <constraint firstAttribute="trailing" secondItem="Acl-R1-Hbi" secondAttribute="trailing" id="2HT-zk-reK"/>
-                <constraint firstItem="zAq-Kz-Q3J" firstAttribute="top" secondItem="Acl-R1-Hbi" secondAttribute="bottom" id="2Ij-j3-AF8"/>
-                <constraint firstItem="Acl-R1-Hbi" firstAttribute="top" secondItem="7Oy-2H-VFO" secondAttribute="top" id="FLQ-mm-PPS"/>
+                <constraint firstItem="eu2-To-yrC" firstAttribute="top" secondItem="0l5-gi-EwB" secondAttribute="bottom" id="A3u-Rb-sYA"/>
+                <constraint firstItem="0l5-gi-EwB" firstAttribute="top" secondItem="7Oy-2H-VFO" secondAttribute="top" constant="64" id="Dea-Se-MPv"/>
                 <constraint firstItem="zAq-Kz-Q3J" firstAttribute="leading" secondItem="7Oy-2H-VFO" secondAttribute="leading" id="QFI-5T-t74"/>
-                <constraint firstItem="Acl-R1-Hbi" firstAttribute="leading" secondItem="7Oy-2H-VFO" secondAttribute="leading" id="YzF-VD-ACa"/>
+                <constraint firstAttribute="trailing" secondItem="0l5-gi-EwB" secondAttribute="trailing" id="UEl-or-cQs"/>
+                <constraint firstAttribute="trailing" secondItem="eu2-To-yrC" secondAttribute="trailing" id="YXq-ox-x2a"/>
+                <constraint firstItem="zAq-Kz-Q3J" firstAttribute="top" secondItem="eu2-To-yrC" secondAttribute="bottom" id="cr1-d4-Nes"/>
+                <constraint firstItem="eu2-To-yrC" firstAttribute="leading" secondItem="7Oy-2H-VFO" secondAttribute="leading" id="jXt-ys-h0n"/>
                 <constraint firstAttribute="trailing" secondItem="zAq-Kz-Q3J" secondAttribute="trailing" id="pCr-Ug-Zu1"/>
+                <constraint firstItem="0l5-gi-EwB" firstAttribute="leading" secondItem="7Oy-2H-VFO" secondAttribute="leading" id="pa6-Xw-oae"/>
             </constraints>
+            <point key="canvasLocation" x="24.5" y="52.5"/>
         </view>
     </objects>
 </document>
