--- a/OpticalValleyUnite/Classes/UI/ReportForm/ViewController/YQReportForm.storyboard
+++ b/OpticalValleyUnite/Classes/UI/ReportForm/ViewController/YQReportForm.storyboard
@@ -46,7 +46,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5J4-pj-26h">
                                         <rect key="frame" x="0.0" y="15.5" width="155.5" height="29"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <state key="normal">
+                                        <state key="normal" title="选择开始时间">
                                             <color key="titleColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
@@ -56,7 +56,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jbC-pZ-rNr">
                                         <rect key="frame" x="181.5" y="15.5" width="148.5" height="29"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <state key="normal">
+                                        <state key="normal" title="选择结束时间">
                                             <color key="titleColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
@@ -156,7 +156,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qMb-CI-x0o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-127.2" y="-154.27286356821591"/>
+            <point key="canvasLocation" x="-356" y="-176"/>
         </scene>
     </scenes>
 </document>
